fix employee to advertisement

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Employee</title>
+    <title>Adertisement</title>
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -11,7 +11,7 @@
 <body>
 <div class="container my-2" align="center">
 
-    <h3>Employee List</h3>
+    <h3>Advertisement List</h3>
     <h4>Day: <td th:text="${day}"></td>   -  Period length <td th:text="${period}"></td> </h4>
 
     <a th:href="@{/nextDay}" class="btn btn-primary btn-sm mb-3" >Next day!</a>
