--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,9 +15,9 @@
     <h4>Day: <td th:text="${day}"></td>   -  Period length <td th:text="${period}"></td> </h4>
 
     <a th:href="@{/nextDay}" class="btn btn-primary btn-sm mb-3" >Next day!</a>
-    <a th:href="@{/nextShow}" class="btn btn-success btn-sm mb-3" >Next advertisement!</a>
+    <a th:href="@{/nextShow}" class="btn btn-success btn-sm mb-3" >Show next advertisement!</a>
     <br>
-    <a th:href="@{/addNew}" class="btn btn-secondary btn-sm mb-3" >Add new advertisement!</a>
+    <a th:href="@{/addNew}" class="btn btn-secondary btn-sm mb-3" >Register new advertisement!</a>
     <table style="width:80%" border="1"
            class = "table table-striped table-responsive-md">
         <thead>
